deployments/k8s/airline-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airline-project-service
spec:
  selector:
    app: airline-project
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: debug
      protocol: TCP
      port: 5005
      targetPort: 5005
  type: NodePort
