deployments/k8s/payments-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airline-payments-service
spec:
  selector:
    app: airline-payments
  ports:
    - protocol: "TCP"
      port: 8081
      targetPort: 8081
  type: NodePort
